retrieveUnpackaged/objects/Application_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Alternate Owner</fullName>
                </value>
                <value>
                    <fullName>Other Contact</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Subject Matter Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Object_Item_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Item__c</fullName>
        <label>Object Item</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Object_Item_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Application Contact</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Application Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>